Bug 1251427 - Require a full update when a TextureHost switches from a TextureSource to another. r=sotaro