gfx/layers/composite/TextureHost.cpp
@@ -559,6 +559,7 @@ BufferTextureHost::PrepareTextureSource(CompositableTextureSourceRef& aTexture)
   if (!shouldCreateTexture) {
     mFirstSource = texture;
     mFirstSource->SetOwner(this);
+    mNeedsFullUpdate = true;
   }
 }
 
